--- a/main.css
+++ b/main.css
@@ -5,17 +5,75 @@ html, body {
 }
 
 body {
-
+	font-family: system-ui, sans-serif;
+	font-size: 1.2em;
+	font-color: #222;
+	background: #FFF;
 }
 
 header {
+	background: #DDD;
+	text-align: center;
+	border-bottom: 2px solid #CCC;
+	padding: 1.2em;
 
+	input, button {
+		border: 2px solid rgba(1, 1, 1, 0.2);
+		font-size: 1.2em;
+		border-radius: 4px;
+	}
+
+	input {
+		padding: 0.2em;
+	}
+
+	button {
+		padding: 0.2em 1.2em;
+	}
+
+	button#goButton {
+		background: rgba(0, 255, 0, 0.2);
+	}
+
+	button#stopButton {
+		background: rgba(255, 0, 0, 0.2);
+	}
+
+	button#clearButton {
+		background: rgba(0, 0, 0, 0.2);
+	}
+}
+
+#content {
+	box-sizing: border-box;
+	max-width: 800px;
+	margin: auto;
+	padding: 1.2em;
+	background: #FFF;
+	min-height: 100vh;
 }
 
 main {
 
 }
 
-footer {
+#skeetContainer {
+	.skeetItem {
+		margin: 12px 0;
+		box-shadow: 0 2px 6px rgba(1, 1, 1, 0.2);
+		border-radius: 8px;
+		padding: 1em;
+	}
+}
 
+footer {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 2em;
+	background: #DDD;
+	text-align: center;
+	border-top: 2px solid #CCC;
+	padding: 1.2em;
 }
