--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ header {
 	background: #DDD;
 	text-align: center;
 	border-bottom: 2px solid #CCC;
-	padding: 1.2em;
+	padding: 1.2em 0.8em 0.8em 0.8em;
 
 	input, button {
 		border: 2px solid rgba(1, 1, 1, 0.2);
@@ -29,6 +29,8 @@ header {
 
 	button {
 		padding: 0.2em 1.2em;
+		cursor: pointer;
+		user-select: none;
 	}
 
 	button#goButton {
@@ -41,6 +43,11 @@ header {
 
 	button#clearButton {
 		background: rgba(0, 0, 0, 0.2);
+	}
+
+	#counter {
+		margin: 0;
+		padding-top: 0.4em;
 	}
 }
 
@@ -59,10 +66,30 @@ main {
 
 #skeetContainer {
 	.skeetItem {
-		margin: 12px 0;
+		margin: 1.2em 0;
 		box-shadow: 0 2px 6px rgba(1, 1, 1, 0.2);
 		border-radius: 8px;
-		padding: 1em;
+		padding: 1em 1.2em;
+
+		.skeetText {
+			font-size: 110%;
+			font-family: ui-serif, serif;
+			line-height: 1.4;
+			margin-bottom: 0.4em;
+
+			a {
+				color: #333;
+				text-decoration: none;
+			}
+		}
+
+		.skeetUsername {
+			text-align: right;
+
+			a {
+				padding-left: 0.4em;
+			}
+		}
 	}
 }
 
