--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ html, body {
 body {
 	font-family: system-ui, sans-serif;
 	font-size: 1.2em;
-	font-color: #222;
+	color: #222;
 	background: #FFF;
 
 	@media screen and (max-width: 680px) {
